<resources>
    <string name="app_name">Matrix Academy</string>
    <string name="email">Email</string>
    <string name="matrix_academy">MATRIX ACADEMY</string>
    <string name="email_caps">EMAIL</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="logo">Logo</string>
    <string name="email_logo">email_logo</string>
    <string name="password_logo">password_logo</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logout">LogOut</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_feed">Feed</string>
    <string name="title_test">Test</string>
    <string name="title_download">Download</string>
    <string name="test_fragment">Test Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="download_fragment">Download Fragment</string>
    <string name="feed_fragment">Feed Fragment</string>
    <string name="app_title">MATRIX ACADEMY</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_attendence">Attendence</string>
    <string name="title_upload">Upload</string>
    <string name="attendencefragment">AttendenceFragment</string>
    <string name="teachertestfragment">TeacherTestFragment</string>
    <string name="uploadfragment">UploadFragment</string>
    <string name="enter_name">Enter Name</string>
    <string name="register">Register</string>
    <string name="enter_date_of_birth">Enter date Of Birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="add_batch">Add Batch</string>
    <string name="subject">Subject</string>
    <string name="days">Days</string>
    <string name="cancel">CANCEL</string>
    <string name="abcd">abcd</string>
    <string name="okay">OKAY</string>
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="edit_image">Edit Image</string>
    <string name="title">Title</string>
    <string name="choose_image">Choose Image</string>
    <string name="enter_description">Enter Description</string>
    <string name="publish_feed">Publish Feed</string>
    <string name="enter_title">Enter Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="feed_image">Feed Image</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_description">Notification Description</string>
    <string name="choose_batch">CHOOSE BATCH</string>
    <string name="enter_marks">ENTER MARKS</string>
    <string name="send">SEND</string>
    <string name="add_resonable_title_with_page_no">Add Resonable Title with Page No</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="publish_notification">PUBLISH NOTIFICATION</string>
    <string name="nonw">-</string>
    <string name="name">Name</string>
    <string name="specialization">Specialization</string>
    <string name="bio">Bio</string>
    <string name="test_date">Test_Date</string>
    <string name="test_marks">Test_Marks</string>
    <string name="position">Position</string>
    <string name="average">Average</string>
    <string name="total_atemptees">Total Atemptees</string>
    <string name="add_new_feed">Add New Feed</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="enter_total_marks">Enter Total marks</string>
    <string name="date_of_test_dd_mm_yyyy">Date of Test(DD-MM-YYYY))</string>
    <string name="upload_type">UPLOAD TYPE</string>
    <string name="upload">UPLOAD</string>
</resources>
