<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_attendence"
        android:icon="@drawable/ic_assignment_ind_black_24dp"
        android:title="@string/title_attendence" />

    <item
        android:id="@+id/navigation_test"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/title_test" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:title="@string/title_upload" />

</menu>
