<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.addy1397.matrixacademy.SigninActivity">

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="236dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_focused"
        android:ems="10"
        android:hint="@string/email_caps"
        android:inputType="textEmailAddress"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="236dp"
        android:layout_height="44dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_focused"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textOff=""
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/sign_in"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="105dp"
        android:layout_height="97dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dashboard_black_24dp" />

    <TextView
        android:id="@+id/text_view_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/teacher"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/Switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Switch" />

    <TextView
        android:id="@+id/textView_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/student"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/Switch"
        app:layout_constraintTop_toTopOf="@+id/Switch" />

    <TextView
        android:id="@+id/title_mA"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/matrix_academy"
        android:textColor="@color/colorblack"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />

    <ImageView
        android:id="@+id/imageView_mail"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:contentDescription="@string/email_logo"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_email"
        app:layout_constraintTop_toTopOf="@+id/edit_text_email"
        app:srcCompat="@drawable/ic_mail_outline_black_24dp" />

    <ImageView
        android:id="@+id/imageView_password"
        android:layout_width="68dp"
        android:layout_height="44dp"
        android:contentDescription="@string/password_logo"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toTopOf="@+id/edit_text_password"
        app:srcCompat="@drawable/ic_lock_open_black_24dp" />

</android.support.constraint.ConstraintLayout>

